--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,5 +6,8 @@
       • <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
       {% endif %}
     {% endfor %}
+    • <a class="page-link" href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>
+    • <a class="page-link" href="https://github.com/{{ site.github_username }}">Github</a>
+    • <a class="page-link" href="https://fi.linkedin.com/in/risto-hietala-8a44325">LinkedIn</a>
   </div>
 </header>
