--- a/_sass/_tufte.scss
+++ b/_sass/_tufte.scss
@@ -54,11 +54,11 @@ h1 { font-weight: 400;
      font-size: 3.2rem;
      line-height: 1; }
 
-h2 { font-style: italic;
+h2 { text-transform: uppercase;
      font-weight: 400;
      margin-top: 2.1rem;
      margin-bottom: 0;
-     font-size: 2.2rem;
+     font-size: 1.9rem;
      line-height: 1; }
 
 h3 { font-style: italic;
@@ -67,6 +67,8 @@ h3 { font-style: italic;
      margin-top: 2rem;
      margin-bottom: 0;
      line-height: 1; }
+
+h1, h2, h3 { color: #000; }
 
 p.subtitle { font-style: italic;
              margin-top: 1rem;
@@ -115,9 +117,7 @@ blockquote .footer { width: 50%;
                     font-size: 1.1rem;
                     text-align: right; }
 
-ol, ul { width: 45%;
-         -webkit-padding-start: 5%;
-         -webkit-padding-end: 5%; }
+ol, ul { padding: 0; }
 
 li { padding: 0.5rem 0; }
 
@@ -213,16 +213,14 @@ img { max-width: 100%; }
 .sidenote:before { content: counter(sidenote-counter) " ";
                    top: -0.5rem; }
 
-p, footer, table, div.table-wrapper-small, div.supertable-wrapper > p, div.booktabs-wrapper { width: 55%; }
+p, footer, table, div.table-wrapper-small, div.supertable-wrapper > p, div.booktabs-wrapper, ol, ul { width: 33em; }
 
 div.fullwidth, table.fullwidth { width: 100%; }
 
 div.table-wrapper { overflow-x: auto;
                     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
 
-@media screen and (max-width: 760px) { p, h1, h2, h3, footer { width: 90%; }
-                                       pre.code { width: 87.5%; }
-                                       ul { width: 85%; }
+@media screen and (max-width: 850px) { p, h1, h2, h3, footer, ol, ul, pre { width: 90%; }
                                        figure { max-width: 90%; }
                                        figcaption, figure.fullwidth figcaption { margin-right: 0%;
                                                                                  max-width: none; }
@@ -231,16 +229,24 @@ div.table-wrapper { overflow-x: auto;
 .sans { font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
         letter-spacing: .03em; }
 
-.code { font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
-        font-size: 1.125rem;
-        line-height: 1.6; }
+code { font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+       font-size: 1.0rem;
+       line-height: 1.6; }
+
+pre > code { font-size: 0.9em; }
 
 h1 .code, h2 .code, h3 .code { font-size: 0.80em; }
 
 .marginnote .code, .sidenote .code { font-size: 1rem; }
 
-pre.code { width: 82.5%;
-           overflow-x: auto; }
+pre { width: 693px;
+      margin-left: -10px;
+      margin-right: -10px;
+      margin-top: 5px;
+      margin-bottom: 5px;
+      padding: 10px;
+      background-color: #e8e8dd;
+      overflow-x: auto; }
 
 .fullwidth { max-width: 90%;
              clear:both; }
@@ -257,7 +263,7 @@ span.newthought { font-variant: small-caps;
 // label.margin-toggle:not(.sidenote-number) { display: none; }
 .margin-toggle:not(.sidenote-number) { display: none; }
 
-@media (max-width: 760px) { .margin-toggle:not(.sidenote-number) { display: none; }
+@media (max-width: 850px) { .margin-toggle:not(.sidenote-number) { display: none; }
                             .sidenote, .marginnote { display: none; }
                             .margin-toggle:checked + .sidenote,
                             .margin-toggle:checked + .marginnote { display: block;
