post: Multi-room audio with MPD, Snapcast and Raspberry Pis

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
       • <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
       {% endif %}
     {% endfor %}
+    • <a class="page-link" href="https://keybase.io/ristohietal">Keybase</a>
     • <a class="page-link" href="https://twitter.com/{{ site.twitter_username }}">Twitter</a>
     • <a class="page-link" href="https://github.com/{{ site.github_username }}">Github</a>
     • <a class="page-link" href="https://fi.linkedin.com/in/risto-hietala-8a44325">LinkedIn</a>
